# repo-rag

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/core/: config.py  database.py
app/models/: chunk.py  repo.py
app/schema/: rag.py
app/services/: chunking.py  embeddings.py
